# simple-tcp-chat

./: CMakeLists.txt  README.md
include/: boost.h
include/chat/: ChatClient.h  ChatMessage.h  ChatServer.h
include/tcp/: tcp_connection.h  tcp_server.h
src/: main.cpp
src/chat/: ChatClient.cpp  ChatServer.cpp
src/tcp/: tcp_connection.cpp  tcp_server.cpp
test/: main.cpp
test.xcodeproj/: project.pbxproj
